# credential-manager

./: .gitignore  Cargo.toml  Makefile  README.md  about.toml  about.txt.hbs  build.rs
.github/: dependabot.yml
.github/workflows/: pr_checks.yml  quickstart.yml  release.yml  rust.yml
crates/webauthn/: Cargo.toml
crates/webauthn-sys/: Cargo.toml  build.rs
crates/webauthn/src/: lib.rs  mozilla.rs  utils.rs  windows.rs
crates/wincred/: Cargo.toml
crates/wincred-sys/: Cargo.toml
crates/wincred/src/: lib.rs
package/obs/: c9s.changes  c9s.spec
src/: lib.rs  main.rs  settings.rs
src/aws/: mod.rs  sso_portal.rs  sso_portal_api.rs  sso_portal_client.rs  sts.rs
src/http/: api_client.rs
src/keyring/: mod.rs
src/keyring/linux/: client.rs  collection.rs  item.rs  mod.rs  session.rs
src/keyring/linux/proxy/: mod.rs  secrets.rs  secrets_collection.rs  secrets_item.rs  secrets_prompt.rs  secrets_session.rs
src/keyring/mac/: client.rs
src/keyring/windows/: client.rs  mod.rs
src/okta/: api_responses.rs  authenticator.rs  authorizer.rs  aws_credentials.rs  mod.rs  okta_api_client.rs  okta_client.rs  saml_parsers.rs  state_machine.rs
src/okta/authenticator/: api_responses.rs  authenticator_client.rs  mod.rs  okta_api_client.rs
src/okta/aws/: aws_credentials.rs  mod.rs
src/okta/aws_sso/: aws_sso_credentials.rs  mod.rs  sso_portal_login.rs
src/verify/: mod.rs  saml.rs  webauthn.rs
