[package]
name = "c9s"
version = "0.1.0-alpha17"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
httpmock = "0.7"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
url = "2.5.0"
base64 = "0.21.7"
select = "0.6.0"
aws-sdk-sts = "1.11.0"
aws-smithy-types-convert = { version = "0.60.3", features = ["convert-time"] }
time = { version = "0.3.31", features = ["formatting", "parsing"] }
clap = { version = "4.4.16", features = ["derive"] }
async-trait = "0.1.77"
toml = "0.8.2"
dirs = "5.0.1"
rpassword = "7.3"
log = "0.4.19"
regex = "1.10"
futures = "0.3"
tmuntaner-webauthn = { version = "0.1.0-alpha.18", features = ["full"] }
tmuntaner-keyring = "0.1.0-alpha.15"
quick-xml = "0.31.0"
