[package]
name = "webauthn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
indicatif = "0.16.2"
authenticator = "0.3.1"
sha2 = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "0.5.0"
windows = "0.21.1"
webauthn-sys = { path="../webauthn-sys" }
